Bug 367688 - Audio Volume Settings of Notification Sounds reset to zero
Summary: Audio Volume Settings of Notification Sounds reset to zero
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_phonon (other bugs)
Version First Reported In: 5.7.3
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Harald Sitter
URL:
Keywords:
: 378031 383787 385379 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-08-22 19:41 UTC by Francisco Gonzalez
Modified: 2019-08-02 16:09 UTC (History)
14 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.11.0
Sentry Crash Report:


Attachments
Prevent unnecessary setting mute (693 bytes, patch)
2017-04-29 06:44 UTC, David Rosca
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Francisco Gonzalez 2016-08-22 19:41:08 UTC
Trying to set notification sounds volume to a value different to 0 is not possible. The slider returns to 0 value.

Reproducible: Always

Steps to Reproduce:
1. Open system settings.
2. Open multimedia settings.
3. On "Applications" tab try to set the "Notifications Sounds" slider to a value different to zero"

Actual Results:  
The value remains at 0.

Expected Results:  
Able to set the volume to a value different than 0.
Comment 1 Rex Dieter 2016-08-24 17:55:37 UTC
confirmed (plasma-5.7.3/fedora-24)
Comment 2 Trent Reed 2016-09-05 20:22:38 UTC
Also running into this on KaOS (plasma-5.7.4/KaOS)
This issue can be found in both the system settings and the plasma-pa applet.
Comment 3 Trent Reed 2016-09-05 21:38:48 UTC
(In reply to Trent Reed from comment #2)
> Also running into this on KaOS (plasma-5.7.4/KaOS)
> This issue can be found in both the system settings and the plasma-pa applet.

Slightly more information: KaOS uses phonon-gstreamer backend.
Comment 4 Pavel 2016-12-14 21:20:29 UTC
Have the same issue. System notification sound is too loud and I can't change it volume.
OS: OpenSUSE Thumbleweed x64, Plasma 5.8.4
Comment 5 Timo Kalliomäki 2017-04-10 09:16:19 UTC
Notification volume being stuck to zero is also present on Debian Stretch, Plasma 5.8.6
Comment 6 Nate Graham 2017-04-28 16:39:43 UTC
Still a problem with Plasma 5.9.4 on openSUSE Tumbleweed.
Comment 7 Orbmiser 2017-04-28 16:48:41 UTC
Yep same issue ongoing Plasma 5.9.5 here on Manjaro Arch based.
Also missing popping sound on mouse wheel volume change. 
Use to be there and other notifications sounds work.
Comment 8 Nate Graham 2017-04-29 00:11:11 UTC
A workaround has been discovered: install the `pavucontrol` package and use `/usr/bin/pavucontrol` to adjust the notification volume. This change becomes "sticky" such that uninstalling pavucontrol along with its deps restores the notification sound slider's adjust-ability as well as bringing back system sounds if they were totally gone for you (https://bugs.kde.org/show_bug.cgi?id=379316).
Comment 9 David Rosca 2017-04-29 06:44:45 UTC
Created attachment 105250 [details]
Prevent unnecessary setting mute

Can someone please test this patch on Plasma 5.9.3 and newer?
Comment 10 demm 2017-04-29 15:16:16 UTC
Using the above patch on plasma-pa 5.9.5 fixes the issue in KaOS. (Frameworks 5.33.0, Qt 5.8.0).
Comment 11 David Rosca 2017-04-29 21:02:03 UTC
Git commit b364a9e6c60cd3681ee7f3680179251e2efd2939 by David Rosca.
Committed on 29/04/2017 at 21:00.
Pushed by drosca into branch 'master'.

StreamRestore: Don't write unnecessary changes

Applet updates mute state with every volume change - it does
writeChanges(volume) immediately following with writeChanges(mute)
and it seems to make PulseAudio to ignore the volume change.
This makes sure that writeChanges() is only called when something really
changed.
FIXED-IN: 5.10.0

Differential Revision: https://phabricator.kde.org/D5657

M  +12   -4    src/streamrestore.cpp

https://commits.kde.org/plasma-pa/b364a9e6c60cd3681ee7f3680179251e2efd2939
Comment 12 David Rosca 2017-05-02 08:28:49 UTC
*** Bug 378031 has been marked as a duplicate of this bug. ***
Comment 13 Darin Miller 2017-09-23 14:05:41 UTC
This problem is still present in Kubuntu 17.10 with plasma 5.10.3 and 5.10.95.
Comment 14 David Rosca 2017-09-24 10:24:01 UTC
Another change will be in 5.11 that should finally fix this issue.
Comment 15 Nate Graham 2017-09-24 13:50:53 UTC
Can you point folks to a commit or Phabricator revision for that change?
Comment 16 David Rosca 2017-09-24 13:59:12 UTC
I did, but it got lost in multiple duplicates being reopened: https://phabricator.kde.org/D7485
Comment 17 Nate Graham 2017-09-24 14:01:55 UTC
*** Bug 383787 has been marked as a duplicate of this bug. ***
Comment 19 Nate Graham 2017-09-24 14:05:12 UTC
Thanks David! And let's always try to mark duplicate reports as such and consolidate information in the master bug. That way interested parties have one central place to find the bug's status, and it's also easy to gauge the level of interest (10 dupes on one bug says more than 10 discrete bugs that haven't been marked as duplicates).
Comment 20 Christoph Feck 2017-10-17 20:01:06 UTC
*** Bug 385379 has been marked as a duplicate of this bug. ***
Comment 21 Mark Smith 2019-08-01 23:23:57 UTC
I had this bug on the latest KDE Neon (5.16). Took me a few hours to find out this solution of installing pavucontrol to unstick the volume mute/zero for system notification sounds. Also, I think this caused an annoying delay in displaying of any notification that also had a sound, for example, it would take like two seconds to display the volume change popup when changing the volume, or when it displays confirmation popups.
Comment 22 Patrick Silva 2019-08-02 16:09:48 UTC
(In reply to marklikesvideogames from comment #21)
> I had this bug on the latest KDE Neon (5.16).
it seems you are affected by bug 407397