StreamRestore: Don't write unnecessary changes

Applet updates mute state with every volume change - it does
writeChanges(volume) immediately following with writeChanges(mute)
and it seems to make PulseAudio to ignore the volume change.
This makes sure that writeChanges() is only called when something really
changed.

BUG: 367688
FIXED-IN: 5.10.0

Differential Revision: https://phabricator.kde.org/D5657